# aiqo-report

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  ai_caller.py  context.py  log_parser.py  pg-autoexplai-ai-analysis.py  pg-autoexplain-ai-analysis.py  pg_autoexplain_ai_analysis.py  pg_autoexplain_analyzer.py  prompts_en.txt  prompts_fr.txt  pyproject.toml  report_generator.py  retoru.json  target_query.html
.github/workflows/: ci.yml
docs/: conf.py  report_templates.rst  sample_report.html
prompts/: FORMAT.txt  SYSTEM.txt  prompts.txt  prompts_fr.txt
report_templates/: report_template.html
scripts/: build_nuitka.sh
src/aiqo_pg_ai_report/: _build_date_generated.txt  ai_caller.py  anonymizer.py  context.py  log_parser.py  pg_aiqo_report.py  pg_autoexplain_analyzer.py  provider_strategies.py  report_data_processor.py  report_generator.py  sql_utils.py  version.py
src/aiqo_pg_ai_report/prompts/: FORMAT.txt  GENERAL_HINTS_SYNTHESIS.txt  SYSTEM.txt  TARGET_QUERY_FORMAT.txt  TARGET_QUERY_SYSTEM.txt  target-query-prompts.txt
src/aiqo_pg_ai_report/report_templates/: _global_data.html  _head.html  _macros.html  _main_content.html  _scripts.html  _target_query_main_content.html  _target_query_scripts.html  report_template.html  target_query_report_template.html
src/aiqo_pg_ai_report/report_templates/components/: _context_section.html  _daily_tabs.html  _global_synthesis.html  _query_accordion.html  _query_details.html  _sidebar.html  _tabs.html  _target_query_details.html
src/aiqo_pg_ai_report/report_templates/static/css/: report-day-view.css  report-icons.css  report-plan-compare.css  report-sidebar.css  report-tabs.css
tests/: test_ai_caller.py  test_ai_caller_integration.py  test_aiqo_pg_ai_report.py  test_anonymizer.py  test_cli_supported_models.py  test_cli_version.py  test_context.py  test_log_parser.py  test_pg_autoexplain_ai_analysis.py  test_report_data_processor.py  test_report_generator.py  test_sql_utils.py
tests/data/: full-json-plan.log_report.html  pg_ctl.log_report.html  plan.json  sample.log_report.html
(+15 files in other folders)
