[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pg-autoexplai-ai-analysis"
version = "0.1.0"
description = "A tool to analyze pg_autoexplain logs with AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlparse = "^0.4.4"
Jinja2 = "^3.1.2"
litellm = "^1.30.1"
ratelimit = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
