[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiqo-pg-ai-report"
version = "2.0.0"
description = "A tool to analyze pg_autoexplain logs with AI"
authors = ["Your Name <ivan.rododendro@gmail.com>"]
license = "UNDEFINED"
readme = "README.md"
packages = [
  { include = "aiqo_pg_ai_report", from = "src" }  # NOME DELLA CARTELLA con underscore
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
sqlparse = "^0.4.4"
Jinja2 = "^3.1.2"
litellm = "==1.82.1"
ratelimit = "^2.2.1"
minify-html = "^0.15.0"
rcssmin = "^1.1.2"
rjsmin = "^1.2.1"
setuptools-scm = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^7.0.0"
mypy = "^1.4.1"
nuitka = "4.0.5"
sphinx = "^8.0.0"
sphinxcontrib-mermaid = "^0.9.2"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(\.venv|\.git|\.mypy_cache|\.pytest_cache|dist|build)/
)
'''

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.setuptools_scm]
fallback_version = "0.0.0"
